stupid authorize button

--- a/drive.html
+++ b/drive.html
@@ -29,6 +29,8 @@
 	  <img src="http://placekitten.com/300/200" />
 	</div>
 	<h2>Room topic: Hello, world</h2>
+	<button id="authorizeButton" disabled>You must authorize</button>
+
 	<button>Alert!</button>
 	<h2>Who</h2>
 	<ul id="whoinroom">
