--- a/drive.html
+++ b/drive.html
@@ -22,8 +22,16 @@
   </head>
   <body>
     <div id="header" class="">
-      <div id="header" class="">
-	<a class="brand"><h1>Yokel</h1></a>
+      <div id="logo" class="">
+	<a class=""><h1>Yokel</h1></a>
+      </div>
+      <div id="nav-links">
+	<ul>
+	  <li><a href="">Account</a></li>
+          <li><a href="">Rooms</a></li>
+          <li><a href="">Home</a></li>
+	</ul>
+
       </div>
     </div>
     <div id="main" class="row">
@@ -42,16 +50,27 @@
       <div id="right" class="">
 	<div id="picbox">
 	  <img src="http://placekitten.com/300/200" />
+	  <p id="edit-pic"><a href="">edit pic</a></p>
+
 	</div>
-	<h2>Room topic: Hello, world</h2>
+	<h3>Hello, Yokel</h3>
+	<p id="edit-topic"><a href="">edit topic</a></p>
 	<button id="authorizeButton" disabled>You must authorize</button>
 
-	<button>Alert!</button>
-	<h2>Who</h2>
-	<ul id="whoinroom">
+	<button class="btn btn-success">Alert!</button>
+	<h3>Who</h3>
+	<ul id="who-in-room">
 	  <li>Jack</li>
 	  <li>Matty</li>
 	</ul>
+	<h3>Linkage</h3>
+	<ul id="top-links">
+	  <li><a href="http://paulgraham.com/love.html">http://paulgraham.com/love.html</a></li>
+          <li><a href="http://www.txtpost.com/playboy-interview-steven-jobs/">http://www.txtpost.com/playboy-interview-steven-jobs/</a></li>
+          <li><a href="http://www.tiger-town.com/whatnot/updike/">http://www.tiger-town.com/whatnot/updike/</a></li>
+          <p id="add=link"><a href="">add link</a></p>
+
+	  </ul>
       </div>
     </div>
 
