--- a/drive.html
+++ b/drive.html
@@ -49,9 +49,9 @@
 
       <div id="right" class="">
 	<div id="picbox">
+    <label for="picbox-input">Pic url</label>
+    <input id="picbox-input" />
 	  <img src="http://placekitten.com/300/200" />
-	  <p id="edit-pic"><a href="">edit pic</a></p>
-
 	</div>
 	<h3>Hello, Yokel</h3>
 	<p id="edit-topic"><a href="">edit topic</a></p>
