--- a/drive.html
+++ b/drive.html
@@ -20,7 +20,7 @@
           src="app.js"></script>
 
   </head>
-  <body>
+  <body onclick="clearTitlePing()">
     <div id="header" class="">
       <div id="logo" class="">
 	<a class=""><h1>Yokel</h1></a>
