--- a/drive.html
+++ b/drive.html
@@ -49,6 +49,8 @@
 
       <div id="right" class="">
 	<div id="picbox">
+    <h3>PicBox</h3>
+    <p>Set the picture by chatting "pic: <url of image>"</p>
 	  <img src="http://placekitten.com/300/200" />
 	</div>
 	<h3>Hello, Yokel</h3>
@@ -60,13 +62,9 @@
 	<ul id="who-in-room">
 	</ul>
 	<h3>Linkage</h3>
+  <p>Add links by chatting "link: <url of link>"</p>
 	<ul id="top-links">
-	  <li><a href="http://paulgraham.com/love.html">http://paulgraham.com/love.html</a></li>
-          <li><a href="http://www.txtpost.com/playboy-interview-steven-jobs/">http://www.txtpost.com/playboy-interview-steven-jobs/</a></li>
-          <li><a href="http://www.tiger-town.com/whatnot/updike/">http://www.tiger-town.com/whatnot/updike/</a></li>
-          <p id="add=link"><a href="">add link</a></p>
-
-	  </ul>
+ </ul>
       </div>
     </div>
 
