--- a/drive.html
+++ b/drive.html
@@ -50,7 +50,7 @@
       <div id="right" class="">
 	<div id="picbox">
     <h3>PicBox</h3>
-    <p>Set the picture by chatting "pic: <url of image>"</p>
+    <p>Set the picture by chatting "pic: &lt;url of image&gt;"</p>
 	  <img src="http://placekitten.com/300/200" />
 	</div>
 	<h3>Hello, Yokel</h3>
@@ -62,7 +62,7 @@
 	<ul id="who-in-room">
 	</ul>
 	<h3>Linkage</h3>
-  <p>Add links by chatting "link: <url of link>"</p>
+  <p>Add links by chatting "link: &lt;url of link&gt;"</p>
 	<ul id="top-links">
  </ul>
       </div>
