--- a/drive.html
+++ b/drive.html
@@ -44,6 +44,7 @@
   <div id="picbox">
     <h3>PicBox</h3>
     <div class="alert alert-info">
+      <a class="close" data-dismiss="alert" href="#">&times;</a>
       Set the picture by chatting <b>"pic: &lt;url of image&gt;"</b>
     </div>
     <img src="http://placekitten.com/300/200" />
@@ -53,6 +54,7 @@
   </ul>
   <h3>Linkage</h3>
   <div class="alert alert-info">
+    <a class="close" data-dismiss="alert" href="#">&times;</a>
       Add links by chatting <b>"link: &lt;url of link&gt;"</b>
     </div>
   <p></p>
