--- a/drive.html
+++ b/drive.html
@@ -12,10 +12,13 @@
   <script src="http://underscorejs.org/underscore-min.js"></script>
   <script type="text/javascript"
   src="https://apis.google.com/js/api.js"></script>
+  <script type="text/javascript"
+  src="static/js/bootstrap.min.js"></script>
 
   <!-- Load the utility library. -->
   <script type="text/javascript"
   src="realtime-client-utils.js"></script>
+
   <script type="text/javascript"
   src="app.js"></script>
 
