better info on button

--- a/drive.html
+++ b/drive.html
@@ -53,7 +53,7 @@
     <img src="http://placekitten.com/300/200" />
   </div>
   <h3>Who</h3>
-  <button id="share" class="btn btn-primary">Share</button>
+  <button id="share" class="btn btn-primary">Invite others to chat</button>
   <ul id="who-in-room">
   </ul>
   <h3>Linkage</h3>
