--- a/drive.html
+++ b/drive.html
@@ -26,7 +26,7 @@
 <body>
   <div id="header" class="">
     <div id="logo" class="">
-     <a class=""><h1>Yokel</h1></a>
+     <a class=""><h1>Yokel<span id="doc-title"></span></h1></a>
    </div>
    <div id="nav-links">
    </div>
