--- a/drive.html
+++ b/drive.html
@@ -31,6 +31,11 @@
    <div id="nav-links">
    </div>
  </div>
+ <div id="doc-title-modal" class="modal hide fade">
+  <label>Label name</label>
+  <input id="new-title-input" type="text" placeholder="New title...">
+ </div>
+
  <div id="main" class="row">
   <div id="left" class="">
    <div id="chatboxdiv" class="span9">
@@ -59,8 +64,8 @@
   <h3>Linkage</h3>
   <div class="alert alert-info">
     <a class="close" data-dismiss="alert" href="#">&times;</a>
-      Add links by chatting <b>"link: &lt;url of link&gt;"</b>
-    </div>
+    Add links by chatting <b>"link: &lt;url of link&gt;"</b>
+  </div>
   <p></p>
   <ul id="top-links">
   </ul>
