--- a/drive.html
+++ b/drive.html
@@ -45,10 +45,11 @@
      <input type="text" id="send-msg-input"/>
    </div>
  </div>
- <div id="loading" class="row">
+ <div id="loading" class="">
   <h2>Loading...</h2>
   <img src="static/img/spinning-loader.gif" />
  </div>
+
  <div id="right" class="">
   <div id="picbox">
     <h3>PicBox</h3>
