--- a/drive.html
+++ b/drive.html
@@ -72,6 +72,9 @@
   <ul id="top-links">
   </ul>
   <h3>Recent Chats</h3>
+  <div id="loading-recent">
+    <img src="static/img/spinning-loader.gif" width="100px" />
+  </div>
   <ul id="recent-chats">
   </ul>
 </div>
