--- a/drive.html
+++ b/drive.html
@@ -73,7 +73,7 @@
   </ul>
   <h3>Recent Chats</h3>
   <div id="loading-recent">
-    <img src="static/img/spinning-loader.gif" width="100px" />
+    <img src="static/img/spinning-loader.gif" />
   </div>
   <ul id="recent-chats">
   </ul>
