--- a/drive.html
+++ b/drive.html
@@ -14,8 +14,9 @@
   src="https://apis.google.com/js/api.js"></script>
   <script type="text/javascript"
   src="static/js/bootstrap.min.js"></script>
+  <script type="text/javascript"
+  src="static/js/swfobject.js"></script>
 
-  <!-- Load the utility library. -->
   <script type="text/javascript"
   src="realtime-client-utils.js"></script>
 
@@ -53,6 +54,8 @@
  <div id="right" class="">
   <div id="picbox">
     <h3>PicBox</h3>
+    <div id="ytapiplayer">
+    </div>
     <div class="alert alert-info">
       <a class="close" data-dismiss="alert" href="#">&times;</a>
       Set the picture by chatting <b>"pic: &lt;url of image&gt;"</b>
