--- a/drive.html
+++ b/drive.html
@@ -56,7 +56,7 @@
     </div>
     <div class="alert alert-info">
       <a class="close" data-dismiss="alert" href="#">&times;</a>
-      Set the picture by chatting <b>"pic: &lt;url of image&gt;"</b>
+      Set the picture/video by chatting <b>"pic: &lt;url of image&gt;"</b> or <b>"yt: &lt;url of youtube video&gt;"</b>
     </div>
     <img src="http://placekitten.com/300/200" />
   </div>
